# RSO_2022_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat
src/: application.cpp  application.hpp  demorso.cpp  demrso.cpp  main.cpp  types.hpp  utils.cpp  utils.hpp  window.hpp
src/raytracing_backend/: camera.cpp  camera.hpp  intersectable.cpp  intersectable.hpp  material.cpp  material.hpp  objects.hpp  operations.cpp  operations.hpp  raytracer.cpp  raytracer.hpp  scene.cpp  scene.hpp
